style.css
:root {
    --primary-color: #301f6f;
    --secondary-color: #43b137;
    --white-color: #fff;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body{
    background: #0e0e0e;
    margin: 0;
    box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
    width: 100%;
    height: 100vh;
}

/* Bottons */

a{
    text-decoration: none;
    color: var(--primary-color);
}

.btn{
    font-size: 13px;
    font-weight: 700;
    border: 1px solid rgba(218,209,177,.1);
    display: flex;
    align-items: center;
    color: var(--white-color);
    padding: 0 16px;
}

.btn-primary{
    background: var(--primary-color);
}

.btn-secondary{
    background: var(--secondary-color);
}


/* Navegation */
nav{
    background: var(--primary-color);
    width: 100%;
    box-sizing: inherit;
    padding: .5rem 24px;
    display: flex;
    justify-content: space-between;
}

    nav > div{
        display: flex;
    }

        nav > div .btn{
           margin: 0 5px;
        }


.aviator{
    background: #1b1c1e;
    width: 100%vw;
    height: 43px;
    display: flex;
    justify-content: space-between;
    margin-top: 1px;
}

.apostas{
    background: #1b1c1e;
    width: 450px;
    height: 650px;
    display: flex;
    margin: 10px;
    border-radius: 10px;
}

.pagina{
    display: flex;
}

.velas{
    display: flex;
    justify-content: space-between;
    height: 50px;
    align-items: center;
    margin-left: 5px;
}

.number{
    margin-inline: 3px;
    background: #080a0a;
    width: 20px;
    height: 25px;
    border-radius: 15px;
    
}

.aviao{
    background: #000000;
    width: 1185px;
    height: 400px;
    border-radius: 20px;
    border: 1px solid #262626;
}

.apostar{
    display: flex;
    width: 1185px;
    justify-content: space-between;
}

.aposta{
    background: #1b1c1e;
    margin-top: 10px;
    width: 587px;
    height: 198px;
    border-radius: 10px;

}

